Fixed broken images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                      <img alt="Brand" src="images/buildlogo.png" width="120px" height="55px">
+                      <img alt="Brand" src="Images/buildlogo.png" width="120px" height="55px">
                     </a>
                   </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
