--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header id="#head">
+    <header id="#head" style="position: sticky; z-index: 1;top: 0px;">
         <nav class="navbar navbar-expand-lg navbar-light bg-alice-blue  ml-auto">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -32,7 +32,7 @@
           </nav>
     </header>
     
-    <section id="img-carousel">
+    <section id="img-carousel mt-5">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
