--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+  <section id="head"></section>
     <header style="position: sticky; z-index: 1;top: 0px;">
         <nav class="navbar navbar-expand-lg navbar-light bg-alice-blue  ml-auto">
             <div class="container-fluid">
@@ -32,6 +33,7 @@
           </nav>
     </header>
     
+   
     <section id="img-carousel">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
