--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
+    <link rel="manifest" href="Favicon/site.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">    
     <title>Document</title>
@@ -172,36 +176,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-10 m-auto">
-                    <table class="table ">
-                        <thead>
-                          <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">UserName</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <th scope="row">1</th>
-                            <td>Naruto</td>
-                            <td>Uzumaki</td>
-                            <td>hogake_leaf</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">2</th>
-                            <td>Hatake</td>
-                            <td>Kakashi</td>
-                            <td>copy_ninja</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">3</th>
-                            <td>Hashiram</td>
-                            <td>Senju</td>
-                            <td>god_of_shinobi</td>
-                          </tr>
-                        </tbody>
-                      </table>
+                  <table class="table table-sm table-dark">
+                    <tbody>
+                      <tr>
+                        <td>Abhiram Rajeevan</td>
+                        <td colspan="2">Analiya Remidios</td>
+                      </tr>
+                      <tr>
+                        <td>Anuksha V</td>
+                        <td colspan="2">Aswathy A</td>
+                      </tr>
+                      <tr>
+                        <td>Neha P</td>
+                        <td colspan="2">Parvathi Rajpal</td>
+                      </tr>
+                      <tr>
+                        <td>Sidharth M</td>
+                        <td colspan="2"></td>
+                      </tr>
+                    </tbody>
+                  </table>
                     </div>
                 </div>
         </div>
